# SpiceMate

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
demo/: CMakeLists.txt  demo.cpp
docs/: Actuation_8h_source.html  DPcallbackChild_8h_source.html  DPcallback_8h_source.html  DataProcess_8h_source.html  Servo__Driver_8h_source.html  TestCallback_8h_source.html  Useful Linux Commands  VIBRO4__rpi_8h_source.html  VL6180X__regBitDefinitions_8h_source.html  VL6180x__regAddress_8h_source.html  VL6180x__rpi_8h_source.html  VL6180xcallbackChild_8h_source.html  VL6180xcallback_8h_source.html  Vibro__reg_8h_source.html  _d_pcallback_8h_source.html  _d_pcallback_child_8h_source.html  _data_process_8h_source.html  _servo___driver_8h_source.html  _test_callback_8h_source.html  _v_i_b_r_o4__rpi_8h_source.html  _v_l6180_x__reg_bit_definitions_8h_source.html  _v_l6180x__rpi_8h_source.html  _v_l6180xcallback_8h_source.html  _v_l6180xcallback_child_8h_source.html  _vibro__reg_8h_source.html  annotated.html  annotated_dup.js  classActuation-members.html  classActuation.html  classActuation.js  classActuation__coll__graph.map  classActuation__coll__graph.md5  classDPcallback-members.html  classDPcallback.html  classDPcallback.js  classDPcallbackChild-members.html  classDPcallbackChild.html  classDPcallbackChild.js  classDPcallbackChild__coll__graph.map  classDPcallbackChild__coll__graph.md5  (+135 more)
docs/VL6180x/: Registers
docs/html/: _actuation_8h_source.html  _v_l6180x__reg_address_8h_source.html  class_d_pcallback.js  class_servo___driver.html  class_v_i_b_r_o4__rpi-members.html  class_v_i_b_r_o4__rpi.html  class_v_l6180x__rpi-members.html  class_v_l6180xcallback-members.html  dir_d522931ffa1371640980b621734a4381.html  files.html  tabs.css  (+7 more)
src/: Actuation.cpp  Actuation.h  CMakeList  CMakeLists.txt  DPCallbackChild.cpp  DPcallback.h  DPcallbackChild.cpp  DPcallbackChild.h  DPcallbackInterface.h  DataProcess.cpp  DataProcess.h  GROVE_magnet.cpp  GROVE_magnet.h  Servo_Driver.cpp  Servo_Driver.h  VIBRO4_rpi.cpp  VIBRO4_rpi.h  VL6180X_regBitDefinitions.h  VL6180X_regOptions.h  VL6180x_regAddress.h  VL6180x_rpi.cpp  VL6180x_rpi.h  VL6180xcallbackChild.cpp  VL6180xcallbackChild.h  VL6180xcallbackInterface.h  Vibro4_rpi.h  Vibro_reg.h  Vibro_rpi.cpp  main.cpp
test/: .test1.cpp.swp  CMakeLists.txt  TestDriver  TestServo.cpp  cbtest_main.cpp  test_main.cpp
tests/: CMakeLists.txt  TestCallback.cpp  TestCallback.h  example  example.cpp  test1.cpp  thresholding.cpp
(+83 files in other folders)
